# tygr

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: design.md  ebnf.md
examples/: adt.tygr  annotations.tygr  calculator.tygr  cons.tygr  empty.tygr  factorial.tygr  fib.tygr  fix.tygr  higher_kinded.tygr  immutable.tygr  map.tygr  mutual.tygr  records.tygr  reduce.tygr
examples/crates/basic_binary/: Tygr.toml
examples/crates/basic_binary/src/: main.tygr
examples/crates/multi_crate/mybin/: Tygr.toml
examples/crates/multi_crate/mylib/: Tygr.toml
examples/programs/: bst.tygr
examples/scripts/: annotations.tygr  calculator.tygr  fib.tygr  immutable.tygr  pattern.tygr  records.tygr  reduce.tygr  variants.tygr
src/: analysis.rs  builtin.rs  compiler.rs  custom.rs  driver.rs  interpreter.rs  ir.rs  lexer.rs  lib.rs  main.rs  manifest.rs  module.rs  parser.rs  repl.rs  sources.rs  visualize.rs
src/analysis/: dependencies.rs  format.rs  inference.rs  main_function.rs  name_table.rs  prepared.rs  resolver.rs
src/analysis/inference/: ast.rs  test.rs  unbound.rs
src/analysis/resolver/: ast.rs
src/ir/: anf.rs  closure.rs  concrete.rs  constructor.rs  decision_tree.rs  monomorphization.rs  pattern.rs  stage.rs  tags.rs  xml.rs
src/ir/direct/: closure.rs  constructor.rs
src/ir/monomorphization/: test.rs
src/lexer/: format.rs
src/module/: format.rs
src/parser/: ast.rs  format.rs
src/visualize/: anf.rs  closure.rs  constructor.rs  decision_tree.rs  pattern.rs  typed.rs
src/visualize/direct/: closure.rs
src/web/: repl.rs
(+2 files in other folders)
