[package]
name = "tygr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
codespan-reporting = "0.13.0"
chumsky = "0.11.1"
phf = "0.13.1"
phf_macros = "0.13.1"
thiserror = "2.0.17"
rustyline = "17.0.2"
colored = "3.0.0"
petgraph = "0.8.3"
