[package]
name = "tygr"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"], optional = true }
codespan-reporting = "0.13.0"
chumsky = "0.11.1"
phf = "0.13.1"
phf_macros = "0.13.1"
thiserror = "2.0.17"
rustyline = { version = "17.0.2", optional = true }
colored = "3.0.0"
petgraph = "0.8.3"
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1.0", features = ["derive", "rc"] }
serde-wasm-bindgen = "0.6"
termcolor = "1.4.1"
bimap = "0.6.3"
vfs = "0.12.2"

[features]
default = ["cli"]
cli = ["clap", "rustyline"]
